[package]
name = "enum_index"
version = "0.1.2"
authors = ["Andrey Putilin <regresscheck@gmail.com>"]
license = "MIT"

description = "Trait and macros for extracting Enum variant index"
keywords = ["enum", "macros", "index"]

homepage = "https://github.com/regresscheck/enum_index"

readme = "../README.md"


[dev-dependencies]
enum_index_derive = "0.1.1"
index_enum_derive = { path = "../index_enum_derive" }
#enum_index_derive = { path = "../enum_index_derive" }
