[package]
name = "enum_index"
version = "0.2.0"
authors = ["Andrey Putilin <regresscheck@gmail.com>"]
license = "MIT"

description = "Trait and macros for extracting Enum variant index and creating Enum by variant index"
keywords = ["enum", "macros", "index"]
categories = ["no-std", "data-structures"]

homepage = "https://github.com/regresscheck/enum_index"

readme = "../README.md"

[features]
default = ["std"]
std = []

[dev-dependencies]
enum_index_derive = { path = "../enum_index_derive", version = "0.2.0" }
