[package]
name = "enum_index_derive"
version = "0.2.0"
authors = ["Andrey Putilin <regresscheck@gmail.com>"]
license = "MIT"

description = "Macros for extracting Enum variant index and creating Enum by variant index"
keywords = ["enum", "macros"]

homepage = "https://github.com/regresscheck/enum_index"

readme = "../README.md"

[dependencies]
proc-macro2 = "1"
syn = "1"
quote = "1"

[lib]
proc-macro = true
